Update Joint Venture timeline animation and fix z-index overlap

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   We Make Your Dreams to Reality
                 </h2>
 
-                <p class="hero-text" style="color:var(--cadet); font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
+                <p class="hero-text" style="color:black; font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
                   Trusted builders with 10+ years of experience. We don't just build, we transform your ideas into
                   quality homes in Velachery, Pallikaranai & Medavakkam.
                 </p>
@@ -267,7 +267,7 @@
                   Premium 2 BHK Flats
                 </h2>
 
-                <p class="hero-text" style="color:var(--cadet); font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
+                <p class="hero-text" style="color:black; font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
                   Modern apartments near TCS with excellent connectivity and top-notch infrastructure.
                 </p>
 
@@ -306,7 +306,7 @@
                   Luxury Living Spaces
                 </h2>
 
-                <p class="hero-text" style="color:var(--cadet); font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
+                <p class="hero-text" style="color:black; font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
                   Centrally situated apartments with attractive amenities and green surroundings.
                 </p>
 
@@ -345,7 +345,7 @@
                   Future Ready Homes
                 </h2>
 
-                <p class="hero-text" style="color:var(--cadet); font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
+                <p class="hero-text" style="color:black; font-size:1.1rem; line-height:1.8; margin-bottom:30px;">
                   Invest in the rapidly developing corridor of Medavakkam.
                 </p>
 
