--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <!-- custom css link -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css?v=8">
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
