--- a/kanyamanjanai.html
+++ b/kanyamanjanai.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
     <!-- custom css link -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css?v=9">
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
