User updates: Card spacing adjustments and title change

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <link rel="stylesheet" href="./assets/css/style.css?v=9">
+  <link rel="stylesheet" href="./assets/css/style.css?v=10">
 
   <!-- 
     - google font link
@@ -899,7 +899,7 @@
                   </div>
 
                   <h3 class="h3 card-title">
-                    <a href="kanyachakra.html">Elevated Lifestyle in Pallikaranai</a>
+                    <a href="kanyachakra.html">Apartments in Pallikaranai</a>
                   </h3>
 
                   <p class="card-text">
